Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3014

mkfs.lustre FATAL: mkfs.lustre: Unable to truncate backing store: Invalid argument

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.4.0
    • Lustre 2.4.0
    • None
    • 3
    • 7335

      On an x86_64 machine:

      $ MDSSIZE=3200000 FSTYPE=zfs sh llmount.sh 
      Stopping clients: RHEL6 /mnt/lustre (opts
      Stopping clients: RHEL6 /mnt/lustre2 (opts
      Loading modules from /root/Work/Lustre/L59/lustre-release/lustre/tests/..
      detected 2 online CPUs by sysfs
      Force libcfs to create 2 CPU partitions
      ../libcfs/libcfs/libcfs options: 'cpu_npartitions=2'
      debug=vfstrace rpctrace dlmtrace neterror ha config ioctl super
      subsystem_debug=all -lnet -lnd -pinger
      ../lnet/lnet/lnet options: 'accept=all'
      gss/krb5 is not supported
      quota/lquota options: 'hash_lqs_cur_bits=3'
      Formatting mgs, mds, osts
      Format mds1: lustre-mdt1/mdt1
      
      mkfs.lustre FATAL: mkfs.lustre: Unable to truncate backing store: Invalid argument
      
      mkfs.lustre FATAL: Unable to create vdev /tmp/lustre-mdt1 (22)
      
      mkfs.lustre FATAL: mkfs failed 22
      mkfs.lustre: exiting with 22 (Invalid argument)
      

      This only happens with ZFS-based targets larger than 2 GB if they file VDevs, which are primarily used for testing purposes.

            liwei Li Wei (Inactive)
            liwei Li Wei (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: